# import-candidates

./: README.md  main.py  pyproject.toml
csv_parser/: parser.py  transformer.py
helpers/: get_shortcode.py
providers/workable/: get_jobs.py  post_candidate.py  post_talent_pool.py
